Fix jumpy page on search field focus

--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -159,6 +159,8 @@ img.thumbnail {
 }
 
 .navbar > .searchbar .pure-form input[type="search"] {
+  margin-bottom: 1px;
+
   border-top: 0;
   border-left: 0;
   border-right: 0;
@@ -169,7 +171,6 @@ img.thumbnail {
 
   box-shadow: none;
 
-  transition: 0.1s border-bottom;
   -webkit-appearance: none;
 }
 
@@ -188,6 +189,7 @@ input[type="search"]::-webkit-search-cancel-button {
 
 /* attract focus to the searchbar by adding a subtle transition */
 .navbar > .searchbar .pure-form input[type="search"]:focus {
+  margin-bottom: 0px;
   border-bottom: 2px solid #aaa;
 }
 
